--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-node_modules
+node_modules/
+.nuxt/
+.output/
+dist/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment files
+.env
+.env.*
+
+# Editor directories and files
+.DS_Store
+.idea/
+.vscode/
+
+# Coverage and test artifacts
+coverage/
